--- a/java/concurrent/线程池.md
+++ b/java/concurrent/线程池.md
@@ -65,7 +65,7 @@ new RejectedExecutionHandler(){
 }
 ```
 
-### Executors工厂类提供了线城市的初始化接口用于初始化ThreadPoolExecutor
+### Executors工厂类提供了线程池的初始化接口用于初始化ThreadPoolExecutor
 
 1、newFixedThreadPool
 ```
