--- a/java/concurrent/线程池.md
+++ b/java/concurrent/线程池.md
@@ -1,5 +1,5 @@
 原文地址：[深入分析java线程池的实现原理](https://www.jianshu.com/p/87bff5cc8d8c)
-### readPoolExecutor
+### TreadPoolExecutor
 ```
 public ThreadPoolExecutor(int corePoolSize,
                               int maximumPoolSize,
